# HDU-Library-Sniper

./: .coverage  .dockerignore  .env.example  .gitignore  AutoSchedule.ps1  CLI_REMOVAL_REPORT.md  CODE_COMPLIANCE_REPORT.md  COMPLETION_REPORT.md  COMPLIANCE_FIX_GUIDE.md  CONTAINERIZATION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  GUI_IMPLEMENTATION_REPORT.md  GUI_QUICKSTART.md  GUI_SUMMARY.md  HDU图书馆抢座.vbs  MIGRATION_TO_MODERN_PYTHON.md  Makefile  POWERSHELL_MIGRATION.md  README.md  README_DOCKER.md  SMOKE_TEST_REPORT.md  UNIT_TEST_REPORT.md  config.example.yaml  config.yaml  docker-compose.yml  docker-entrypoint.sh  launch.bat  main.py  pyproject.toml  requirements.txt  start.bat  start.sh  start_gui.bat  start_gui.sh  test_buttons_simple.py  test_gui.py  test_gui_buttons.py  test_scheduler.py  test_styles.py
.github/workflows/: book-seat.yml  desktop-release.yml
cli/: __init__.py  app.py  menu.py  prompts.py  views.py
config/: config.yaml  settings.py
core/: __init__.py  client.py  contract.py  room_browser.py  sniper.py
core/sniper/: __init__.py  plan.py  repository.py  retry.py  sniper.py
data/: plans.yaml
deploy/config/: README.md
docs/: ARCHITECTURE.md  CLI_REMOVAL_ANALYSIS.md  DESKTOP-RELEASE.md  DOCKER.md  GUI_ARCHITECTURE.md  GUI_OPTIMIZATION.md  GUI_QUICKREF.md  GUI_USAGE.md  github-actions-setup.md
docs/archive/: CLI_REMOVAL_SUMMARY.md  GUI_SCHEDULER_IMPLEMENTATION.md
docs/contracts/: 00_overview.md  schemas.md  schemas.py
docs/contracts/samples/: baseInfo.json  book_seats.json  myBookingList.json  room_detail.json  room_types.json  seat_map.json
gui/: app.py  main_window.py  styles.py  workers.py
gui/dialogs/: __init__.py  browse_rooms_dialog.py  create_plan_dialog.py  delete_plans_dialog.py  modify_time_dialog.py  scheduler_config_dialog.py
packaging/windows/: installer.iss
scripts/: AutoSchedule.ps1  Build-Windows.ps1  Generate-AppIcons.ps1  build-macos.sh  launch.ps1  loop_sniper.sh  run_libsniper.sh  scheduler.py  setup.sh
services/: __init__.py  auth.py  booking.py  browser_auth.py  plans.py  runtime.py  scheduler.py
src/: desktop.py
src/application/: __init__.py  facade.py
src/config/: settings.py
src/core/: __init__.py  client.py  contract.py
src/core/sniper/: repository.py
src/hdu_sniper/: __init__.py  __main__.py  app.py  config.py  desktop.py  diagnostics.py  events.py  notifier.py  paths.py  runtime.py  scheduler.py  server.py
src/hdu_sniper/booking/: __init__.py  models.py  plans.py  retry.py  runner.py  time.py
src/hdu_sniper/ui/: __init__.py  app.py
src/interfaces/: __init__.py  api.py
src/services/: __init__.py  auth.py  booking.py  browser_auth.py  runtime.py  scheduler.py
src/ui/: __init__.py  flet_app.py  main_window.py
src/ui/dialogs/: __init__.py  create_plan_dialog.py  scheduler_config_dialog.py
src/utils/: encrypt.py  notifier.py  time_utils.py
tests/: test_api.py  test_application.py  test_booking_rules.py  test_booking_runner.py  test_contracts.py  test_entrypoints.py  test_library_client.py  test_packaged_runtime.py  test_scheduler.py  test_settings.py  test_supporting_services.py  test_ui_authentication.py
ui/: app.py  main_window.py  styles.py  workers.py
ui/dialogs/: __init__.py  browse_rooms_dialog.py  create_plan_dialog.py  delete_plans_dialog.py  modify_time_dialog.py
utils/: __init__.py  encrypt.py  notifier.py  time_sync.py  time_utils.py
