[project]
name = "hdu-library-sniper"
version = "1.0.0"
description = "杭州电子科技大学图书馆座位自动抢座工具"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.61.0",
    "pyside6>=6.11.1",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]
authors = [
    { name = "AlaIchhe", email = "your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
]
lint = [
    "ruff>=0.8.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "PTH",    # flake8-use-pathlib
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # Allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
]

