[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hdu-library-sniper"
version = "1.0.0"
description = "杭州电子科技大学图书馆座位自动抢座工具"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "flet[all]>=0.85.3,<0.86",
    "platformdirs>=4.3.8",
    "playwright>=1.61.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "tzdata>=2025.2; sys_platform == 'win32'",
    "uvicorn>=0.35.0",
]

authors = [
    { name = "AlaIchhe", email = "your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["library", "booking", "automation", "hdu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
hdu-sniper = "hdu_sniper.__main__:main"

[tool.flet]
product = "HDU Library Sniper"
artifact = "HDU-Library-Sniper"
project = "hdu_library_sniper"
company = "HDU Library Sniper Contributors"
org = "io.github.alaichhe"
copyright = "Copyright (C) 2026 HDU Library Sniper Contributors"
build_number = 1

[tool.flet.app]
path = "src"
module = "desktop.py"
exclude = ["__pycache__", "*.pyc"]

[tool.hatch.build]
exclude = [
    "/.coverage",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.uv-cache*",
    "/.venv",
    "/dist",
    "/packaging/.cache",
    "/*.spec",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hdu_sniper"]

[tool.hatch.build.targets.wheel.force-include]
"assets/fonts" = "hdu_sniper/assets/fonts"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "package"},
    {include-group = "test"},
]
lint = [
    "ruff>=0.15.21",
]
package = [
    "pillow>=11.3.0",
    "pyinstaller>=6.14.0,<7",
]
test = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", ".", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "PTH",    # flake8-use-pathlib
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "T20",    # flake8-print
    "PIE",    # flake8-pie
    "COM",    # flake8-commas
    "DTZ",    # flake8-datetimez
    "ARG",    # flake8-unused-arguments
    "PL",     # pylint
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "T201",    # print found (we may need print for debugging)
    "PLR0913", # too many arguments
    "PLR2004", # magic value in comparison
    "COM812",  # conflicts with formatter
    "RUF001",  # ambiguous unicode in strings (Chinese uses fullwidth punctuation)
    "RUF002",  # ambiguous unicode in docstrings (Chinese uses fullwidth punctuation)
    "RUF003",  # ambiguous unicode in comments (Chinese uses fullwidth punctuation)
    "PLR0911", # too many return statements (complex business logic)
    "PLR0912", # too many branches (complex business logic)
    "PLR0915", # too many statements (complex business logic)
    "DTZ007",  # datetime.strptime without %z (parsing user input time strings)
    "SIM105",  # contextlib.suppress (prefer explicit try-except for clarity)
    "PLW1510", # subprocess.run without check (we handle return codes manually)
    "RUF059",  # unused unpacked variable (intentional for readability)
    "PLR1714", # multiple comparisons (more readable as-is)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "ARG001", "PLC0415"]  # Allow assert, magic values, unused args, and lazy imports in tests
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"src/hdu_sniper/__main__.py" = ["PLC0415"]  # Allow lazy imports for conditional CLI modes
"src/hdu_sniper/ui/**" = ["PLC0415"]  # Allow lazy imports for optional Web runtime components
"scripts/**" = ["PLC0415"]  # Allow lazy imports in scripts
"src/hdu_sniper/library/login.py" = ["PLC0415"]  # Allow lazy playwright import

[tool.ruff.lint.isort]
known-first-party = ["hdu_sniper"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=src/hdu_sniper",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
    "-v",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
